--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"scripts": {
 		"build": "tsup src/index.ts --format esm --clean --minify --metafile",
 		"dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
+		"test": "vitest run",
 		"format": "prettier --write \"**/*.{ts,md,json}\"",
 		"prepare": "husky install",
 		"changeset": "changeset",
@@ -41,7 +42,8 @@
 		"prettier": "^2.7.1",
 		"tsup": "^6.1.3",
 		"type-fest": "^2.16.0",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"vitest": "^0.22.0"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": [
