--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
 		"paths": {
 			"*": ["src/*"]
 		},
-		"target": "ESNext",
-		"module": "NodeNext",
-		"lib": ["DOM", "DOM.Iterable", "ES2020"],
-		"moduleResolution": "NodeNext",
+		"target": "ES2020",
+		"module": "ES2020",
+		"lib": ["ES2020"],
+		"moduleResolution": "Node",
 		"resolveJsonModule": true,
 		"sourceMap": true,
 		"emitDecoratorMetadata": true,
@@ -22,7 +22,7 @@
 		"useDefineForClassFields": true,
 		"skipLibCheck": true,
 		"isolatedModules": true,
-		"allowJs": false,
+		"allowJs": false
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
