--- a/package.json
+++ b/package.json
@@ -27,23 +27,24 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.24.1",
-		"@commitlint/cli": "^17.0.3",
-		"@commitlint/config-conventional": "^17.0.3",
+		"@commitlint/cli": "^17.1.1",
+		"@commitlint/config-conventional": "^17.1.0",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
-		"@types/figlet": "^1.5.4",
-		"@types/node": "^18.0.3",
-		"@typescript-eslint/eslint-plugin": "^5.30.5",
-		"@typescript-eslint/parser": "^5.30.5",
-		"eslint": "^8.19.0",
+		"@types/figlet": "^1.5.5",
+		"@types/node": "^18.7.13",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"eslint": "^8.23.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
-		"tsup": "^6.1.3",
-		"type-fest": "^2.16.0",
-		"typescript": "^4.7.4",
-		"vitest": "^0.22.0"
+		"ts-node": "^10.9.1",
+		"tsup": "^6.2.3",
+		"type-fest": "^2.19.0",
+		"typescript": "^4.8.2",
+		"vitest": "^0.22.1"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": [
