--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"scripts": {
 		"build": "tsup src/index.ts --format esm --clean --minify --metafile",
 		"dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
-		"test": "vitest run",
+		"test": "vitest",
 		"format": "prettier --write \"**/*.{ts,md,json}\"",
 		"prepare": "husky install",
 		"changeset": "changeset",
@@ -26,21 +26,20 @@
 		"ora": "^6.1.2"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.24.1",
-		"@commitlint/cli": "^17.1.1",
+		"@changesets/cli": "^2.24.4",
+		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
 		"@types/figlet": "^1.5.5",
-		"@types/node": "^18.7.13",
-		"@typescript-eslint/eslint-plugin": "^5.35.1",
-		"@typescript-eslint/parser": "^5.35.1",
+		"@types/node": "^18.7.14",
+		"@typescript-eslint/eslint-plugin": "^5.36.0",
+		"@typescript-eslint/parser": "^5.36.0",
 		"eslint": "^8.23.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
-		"ts-node": "^10.9.1",
 		"tsup": "^6.2.3",
 		"type-fest": "^2.19.0",
 		"typescript": "^4.8.2",
